<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".proyect.Activities.PerfilActivity">

    <!--<ImageView
        android:id="@+id/foto"
        android:layout_width="94dp"
        android:layout_height="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/googleg_standard_color_18" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/griscaja"
        android:layout_marginTop="16dp"
        android:src="@drawable/brigadista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Nombre"
        android:textColor="@color/rojo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto" />

    <TextView
        android:id="@+id/tbriga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tipo_brigadista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te" />

    <TextView
        android:id="@+id/tplanta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/planta"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbriga" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/Reportar"
        android:textColor="@color/rojo"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tplanta"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/leve"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/amarrilloboton"
        android:shadowDx="10"
        android:shadowRadius="5"
        android:text="@string/leve"
        android:textColor="@color/colornegro"
        app:layout_constraintEnd_toStartOf="@+id/grave"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/grave"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/rojo"
        android:text="@string/Grave"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/regular"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/azulboton"
        android:text="@string/Emergenciar"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toStartOf="@+id/toxicas"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leve" />

    <Button
        android:id="@+id/toxicas"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/naranjaboton"
        android:text="@string/Emergenciato"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grave" />

    <Button
        android:id="@+id/quimicas"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:background="@color/berdeboton"
        android:text="@string/Emergenciaqu"
        android:textColor="@color/colornegro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toxicas"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/quimicas"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regular"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/botonemergencia"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/Telefonosemer"
        android:textColor="@color/rojo"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:ignore="MissingConstraints,SmallSp" />

</android.support.constraint.ConstraintLayout>