<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <EditText
            android:id="@+id/dos"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/uno"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="datetime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/uno"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/cuatro"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="@string/nombre_paciente"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tres"
            app:layout_constraintTop_toBottomOf="@+id/dos"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/cinco"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/inicio"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cuatro"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/seis"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/queja_principal"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cinco"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/siete"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seis"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ocho"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/genero"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/siete"
            app:layout_constraintTop_toBottomOf="@+id/seis"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/nueve"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ubicacion_del_accidente"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ocho"
            app:layout_constraintTop_toBottomOf="@+id/seis"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/diez"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="@string/manejo_especial"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nueve"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/once"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="@string/destino_del_paciente"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diez"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/uno"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/subsecuente"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/tres"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="@string/tipo_de_evento"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uno"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/elaboro_la_cedula_de_atencion_inicial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/once"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/catorce"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="@string/nombre_del_jefe_de_brigada"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Se traslado al vehiculo de ambulancia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/catorce"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/diesisiete"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="Responsable"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/diesiocho"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Nombre del responsable del servicio"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diesisiete"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/diesinueve"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="PLACA"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diesiocho"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/veinte"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="Numero de contacto"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toEndOf="@+id/diesinueve"
            app:layout_constraintTop_toBottomOf="@+id/diesiocho"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/veintiuno"
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Observaciones"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diesinueve"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/veintidos"
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Despacho"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/veintiuno"
            app:layout_constraintTop_toBottomOf="@+id/veinte"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Registar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="Registrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/veintiuno" />

        <EditText
            android:id="@+id/doce"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="si / no"
            android:inputType="textPersonName"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/catorce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/once"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/trece"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorbitacora"
            android:ems="10"
            android:hint="si / no"
            android:inputType="textPersonName"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/diesisiete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/catorce"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>